--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* Logo */
 [data-testid="stSidebar"] {
-                background-image: url("https://i.imgur.com/VSkbU8P.png");
-                background-size: 100px;
+                background-image: url("https://i.imgur.com/30lNm4h.png");
+                background-size: 260px;
                 background-repeat: no-repeat;
                 background-position: 4px 20px;
             }
 
 
 /* Card */
-/* Adapted from https://startbootstrap.com/theme/sb-admin-2 */
+/* https://startbootstrap.com/theme/sb-admin-2 */
 /* nb essai | nb intervention | nb pupblication */
 /* id css de la colonne */
 div.css-1r6slb0.e1tzin5v2 {
@@ -29,17 +29,17 @@ label.css-1wivap2.e16fv1kl3 {
 }
 
 
-/* Move block container higher */
+/* block container plus haut */
 div.block-container.css-k1ih3n.egzxvld4 {
   margin-top: -5em;
 }
 
-/* Hide hamburger menu */
-div.css-14xtw13.e8zbici0 {
-  display: none;
-}
+/* Cacher hamburger menu */
+/*div.css-14xtw13.e8zbici0 {*/
+/*  display: none;*/
+/*}*/
 
-/* Hide footer */
+/* Cacher footer */
 footer.css-164nlkn.egzxvld1 {
   display: none;
 }
