--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* Card */
 /* https://startbootstrap.com/theme/sb-admin-2 */
-/* nb essai | nb intervention | nb pupblication */
+/* nb essai | nb intervention | nb publication */
 /* id css de la colonne */
 div.css-1r6slb0.e1tzin5v2 {
     background-color: #FFFFFF;
